--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -41,3 +41,8 @@ jobs:
 
     - name: Run tests
       run: go test -race -vet=off -coverprofile=./coverage.out ./...
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4.0.1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
